--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,8 +10,8 @@ body{
 
 :root {
   
-  --color-dark-bg: rgb(2 6 23);
-  --color-dark-text: rgb(226 232 240);
+  --color-dark-bg: rgba(24, 24, 34, 0.991);
+  --color-dark-text: rgb(223, 226, 232);
   --color-dark-light-violet: rgb(124 58 237);
   --color-dark-dark-violet: rgb(91 33 182);
   
